<resources>
    <string name="app_name">AppCine</string>

    <!-- TEXTOS DE LOGIN -->
    <string name="login_mail">Ingrese su usuario o correo</string>
    <string name="login_pass">Ingrese su contraseña</string>
    <string name="login_btnLogin">Ingresar</string>
    <string name="login_btnRegister">Registrar</string>
    <string name="login_fogetPass">Olvidé mi contraseña</string>


    <!-- TEXTOS DE OLVIDASTE LA CONTRASEÑA -->
    <string name="IngresarCorreo">Ingresa tu correo</string>
    <string name="RecuperaContra">Recupera tu contraseña</string>
    <string name="btnrecuperarContra">Recuperar</string>
    <string name="correoEnviado">Se te ha enviado un correo para obtener nueva contraseña</string>
    <string name="correoInvalido">Correo invalid. No se ha podido recuperar</string>


    <!-- TEXTOS DE REGISTRO -->
    <string name="reg_title">Registrarse</string>
    <string name="reg_tilMail">ejemplo@correo.cl</string>
    <string name="reg_tilPass">Contraseña mayor a 8 caracteres</string>
    <string name="reg_tilRpass">Repetir su contraseña</string>
    <string name="reg_tilBdate">Fecha de nacimiento</string>
    <string name="reg_chkCondiciones">Acepto las condiciones</string>


    <!-- ERRORES -->
    <string name="campo_nulo">El campo no debe estar vacío</string>
    <string name="passLenght">La contraseña debe tener al menos 8 caracteres</string>
    <string name="error_login_correoFormat">El formato de correo debe ser mail@dom.cl</string>
    <string name="no_coinciden_pass">Las contraseñas no coinciden</string>
    <string name="ingresar_fecha">Debe ingresar fecha de nacimiento</string>

    <!-- Textos selección imagen -->
    <string name="userAvatarSelection">Selecciona una foto para tu perfil</string>
    <string name="btnNext">Siguiente</string>
    <string name="acceptPermission">Debes aceptar los permisos para seleccionar una imagen</string>
    <string name="uploadingImage">Configurando imagen seleccionada en tu perfil. Por favor, espera</string>
    <string name="uploadingImageError">No se pudo actualizar la imagen</string>
    <string name="imageUpdated">Foto de perfil actualizada</string>
    <string name="imageUpdatedFailure"> Falló la actualización de la imagen</string>
    <string name="dataSavedSucces"> Datos guardados correctamente </string>
    <string name="editData">Actualiza tus datos</string>


    <!-- TEXTOS DE PREFERENCIAS -->
    <string name="pref_title">Preferencias</string>
    <string name="pref_saludoUsuario">Hola </string>
    <string name="pref_seleccioneGeneros">Selecciona tus géneros favoritos</string>
    <string name="pref_btnRegistrar">Finalizar</string>
    <string name="pref_skip">Omitir paso</string>


    <!-- TEXTOS DE CHECKBOX -->
    <string name="chkComedy">Comedia</string>
    <string name="chkHistory">Historia</string>
    <string name="chkSciFi">Ciencia\nFicción</string>
    <string name="chkRomance">Romance</string>
    <string name="chkThriller">Thriller</string>
    <string name="chkMystery">Misterio</string>
    <string name="chkDrama">Drama</string>
    <string name="chkHorror">Horror</string>
    <string name="chkWar">Guerra</string>
    <string name="chkAction">Acción</string>
    <string name="chkMusical">Musical</string>
    <string name="chkSuperhero">Super\nHeroes</string>
    <string name="chkAnimation">Animación</string>
    <string name="chkRoadmovie">Road\nMovie</string>
    <string name="chkFantasy">Fantasía</string>
    <string name="chkSports">Deportes</string>


    <!-- Spinner -->
    <!--Movie item -->
    <string name="release_date">Estreno:</string>
    <string name="date">2020-12-12</string>

    <!-- Detail Movie Item -->
    <string name="usersOpinions"> Opinión de los usuarios</string>
    <string name="movieItemDetails">Detalles de la película</string>

    <!-- Textos mensaje usuario -->
    <string name="opinionUserName">Nombre del usuario</string>
    <string name="opinionUserMessage">Aquí</string>

    <!-- Textos user configs layout -->
    <string name="tvAccountInfo">Información de mi cuenta</string>
    <string name="userConfigName">nombreUsuario</string>
    <string name="userConfigMail">ejemplo.ejemplo@email.com</string>
    <string name="userConfigPass">contraseña del usuario</string>
    <string name="userConfigBday">2021/02/02</string>
    <string name="btnEdit">Editar datos</string>
    <string name="btnSave">Guardar datos</string>


</resources>