<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1d2c"
    tools:context=".Views.UserConfigsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/tvAccountInfo"
                android:textColor="#b7bac4"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.325"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.02" />

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="#262837"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivUserProfileImage"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:src="@drawable/boy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />


                    <ImageView
                        android:id="@+id/ivUserIcon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/user"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.13"
                        app:layout_constraintStart_toStartOf="@+id/ivUserProfileImage"
                        app:layout_constraintTop_toBottomOf="@+id/ivUserProfileImage"
                        app:layout_constraintVertical_bias="0.1" />

                    <EditText
                        android:id="@+id/etUserConfigName"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_message"
                        android:hint="@string/userConfigName"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:textColor="#b7bac4"
                        android:textColorHint="#707281"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="@+id/ivUserIcon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.195"
                        app:layout_constraintStart_toEndOf="@+id/ivUserIcon"
                        app:layout_constraintTop_toTopOf="@+id/ivUserIcon"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageView
                        android:id="@+id/ivUserEmail"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="14dp"
                        android:src="@drawable/email"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/ivUserIcon"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/ivUserIcon"
                        app:layout_constraintTop_toBottomOf="@+id/ivUserIcon"
                        app:layout_constraintVertical_bias="0.02" />

                    <EditText
                        android:id="@+id/etUserConfigEmail"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_message"
                        android:hint="@string/userConfigMail"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:textColor="#b7bac4"
                        android:textColorHint="#707281"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="@+id/ivUserEmail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.224"
                        app:layout_constraintStart_toEndOf="@+id/ivUserEmail"
                        app:layout_constraintTop_toTopOf="@+id/ivUserEmail"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="17dp"
                        android:src="@drawable/lock"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/ivUserEmail"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/ivUserEmail"
                        app:layout_constraintTop_toBottomOf="@+id/ivUserEmail"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/etUserConfigPass"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_message"
                        android:hint="@string/userConfigPass"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColor="#b7bac4"
                        android:textColorHint="#707281"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.177"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="@+id/imageView4"
                        app:layout_constraintVertical_bias="0.5" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="17dp"
                        android:src="@drawable/calendar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView4"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/etUserConfigBday"
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_message"
                        android:hint="@string/userConfigBday"
                        android:inputType="date"
                        android:minHeight="48dp"
                        android:textColor="#b7bac4"
                        android:textColorHint="#707281"
                        android:textSize="15dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                        app:layout_constraintEnd_toEndOf="@+id/etUserConfigPass"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="@+id/imageView5"
                        app:layout_constraintVertical_bias="0.5" />

                    <Button
                        android:id="@+id/btnConfigEdit"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        android:backgroundTint="#6b5ecd"
                        android:text="@string/btnEdit"
                        android:textColor="#ded9f4"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        app:cornerRadius="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.19"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/etUserConfigBday"
                        app:layout_constraintVertical_bias="0.219" />

                    <Button
                        android:id="@+id/btnConfigSave"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:backgroundTint="#6b5ecd"
                        android:text="@string/btnSave"
                        android:textColor="#ded9f4"
                        android:textStyle="bold"
                        app:cornerRadius="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.229"
                        app:layout_constraintStart_toEndOf="@+id/btnConfigEdit"
                        app:layout_constraintTop_toTopOf="@+id/btnConfigEdit"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>