<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#13111a"
    tools:context=".Views.AvatarSelectionActivity">


    <TextView
        android:id="@+id/txtSaludoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/pref_saludoUsuario"
        android:textColor="#fcfbfd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuario"
        android:textColor="#fcfbfd"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSaludoUsuario"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/txtGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/userAvatarSelection"
        android:textAlignment="textStart"
        android:textColor="#fcfbfd"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        app:layout_constraintVertical_bias="0.379" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/view_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.78"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSelectUserImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:cardCornerRadius="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998">

            <ImageView
                android:id="@+id/ivSelectUserImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/boy" />

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/btnAddUserImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/rounded_button"
            android:scaleType="centerCrop"
            android:src="@drawable/add_image"
            app:layout_constraintBottom_toBottomOf="@+id/cvSelectUserImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cvSelectUserImage"
            app:layout_constraintTop_toTopOf="@+id/cvSelectUserImage"
            app:layout_constraintVertical_bias="0.925" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:backgroundTint="#6b5ecd"
            android:text="@string/btnNext"
            android:textColor="#ded9f4"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvSelectUserImage"
            app:layout_constraintVertical_bias="0.516"
            app:strokeColor="@color/black" />

        <ProgressBar
            android:id="@+id/pbUploadingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvSelectUserImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>